# innertalk-ai

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  ollama.rs  sidecar.rs  storage.rs
src/components/chat/: ChatInput.tsx  ChatPanel.tsx  ChatView.tsx  MessageBubble.tsx
src/components/files/: FilesPanel.tsx
src/components/settings/: SettingsModal.tsx
src/components/sidebar/: BottomBar.tsx  LeftPanel.tsx  Sidebar.tsx
src/lib/: ollama.ts  storage.ts
src/stores/: appStore.ts  chatStore.ts
