[package]
name = "innertalk-ai"
version = "0.1.0"
description = "A private, offline AI chat app powered by Ollama"
authors = ["JoFaTech2508"]
license = "MIT"
repository = "https://github.com/JoFaTech2508/innertalk-ai"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
sysinfo = "0.33"
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
tauri-plugin-dialog = "2"
dirs = "5"
notify-debouncer-mini = "0.4"
notify = "6"
